# SongSpark

./: Cargo.toml  README.md  Trunk.toml  build.ps1  index.html  styles.css
examples/: README.md  bass-and-beats.jsong  breakbeat-advanced.jsong  channels-drums-melody.jsong  chord-stabs.jsong  complex-house.jsong  disco-groove.jsong  dnb-loop.jsong  hiphop-groove.jsong  index.json  melody-and-drums.jsong  presets.json  reggae-drop.jsong  synth-drums-simple.jsong  techno-loop.jsong  trap-beat.jsong
packs/: example.jsamp
samples/: README.md  metadata.json
src/: app.rs  audio.rs  export.rs  main.rs  patterns.rs  presets.rs
src/components/: about.rs  editor.rs  metronome.rs  mixer.rs  mod.rs  player.rs  quick_info.rs  sample_library.rs  settings.rs  step_strip.rs  visualizer.rs
