[package]
name = "songspark"
version = "0.1.0"
edition = "2021"
authors = ["frangedev"]
description = "A browser-based live coding platform for creating music through code"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioParam",
    "BaseAudioContext",
    "GainNode",
    "StereoPannerNode",
    "OscillatorNode",
    "OscillatorType",
    "AnalyserNode",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlSelectElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "HtmlElement",
    "Element",
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "Blob",
    "BlobPropertyBag",
    "Url",
]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
gloo = "0.9"
gloo-net = "0.5"
gloo-timers = "0.3"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true 